cluster/default/radicale/radicale.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radicale
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
spec:
  rules:
    - host: rc.sko.ai
      http:
        paths:
          - backend:
              serviceName: radicale
              servicePort: 5232
            path: /
  tls:
    - hosts:
        - rc.sko.ai
---
apiVersion: v1
kind: Service
metadata:
  name: radicale
spec:
  ports:
    - protocol: TCP
      port: 5232
      targetPort: 5232
  selector:
    app: radicale
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
spec:
  selector:
    matchLabels:
      app: radicale
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radicale
    spec:
      containers:
        - image: tomsquest/docker-radicale:3.0.6.3
          name: radicale
          ports:
            - containerPort: 5232
              name: radicale
          volumeMounts:
            - name: pv-radicale
              mountPath: /data
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: 5232
          readinessProbe:
            httpGet:
              path: /
              port: 5232
      volumes:
        - name: pv-radicale
          persistentVolumeClaim:
            claimName: radicale-v2
        - name: config
          configMap:
            name: radicale-config
